--- a/2DArtwork.html
+++ b/2DArtwork.html
@@ -14,53 +14,117 @@
         <div class="LmyStuff">
           <a href="2DArtwork.html">2D ILLUSTRATIONS</a>
         </div>
-        <div class="LmyStuff"><a href="3DArtwork.html">3D ARTWORK</a></div>
+        <div class="LmyStuff"><a href="Resume.html">RESUME</a></div>
       </div>
       <a class="title" href="Portfolio.html"
         ><center>WATERS PORTFOLIO</center>
       </a>
       <div class="Nav">
-        <div class="RmyStuff"><a href="Future.html">FUTURE PROJECTS</a></div>
-        <div class="RmyStuff"><a href="Portfolio.html">ABOUT</a></div>
-        <!-- <div class="menu-container">
-        <div class="menu"></div>
-       <div class="menu"></div>
-       <div class="menu"></div></div> -->
+        <div class="RmyStuff"><a href="Web-Dev.html">WEB DEVELOPMENT</a></div>
+        <div class="RmyStuff"><a href="commissions.html">COMMISSIONS</a></div>
       </div>
     </div>
     <!-- TopText for the images with description-->
-    <div class="TopText">
-      <h1>ILLUSTRATIONS</h1>
-      <p>from 2022 - Present</p>
+    <div class="TopText-container">
+      <div class="TopText">
+        <h1>ILLUSTRATIONS</h1>
+        <p class="Illustration_Date">FROM 2022 - PRESENT</p>
+      </div>
     </div>
     <!-- Artworks container will hosts all of my current art -->
+    <!-- Add another "art" class to add another artwork to the gallery! -->
     <div class="Artworks-container">
+      <!-- <p class="newArt-text">*NEW!*</p> -->
       <div class="art1">
-        <img class="images_Agni" src="ART/Agni.png" alt="" />
-      </div>
-      <div class="art2">
-        <img class="images_Chopper" src="style_files/MypfpRedo.png" alt="" />
-      </div>
-      <div class="art3">
-        <img src="style_files/SalmonRun.png" alt="" class="images_SR" />
-      </div>
-      <div class="art4">
-        <img class="images_Luffy" src="ART/LuffyGearTwoPrint.jpg" alt="" />
+        <a target="_blank" rel="noopener noreferrer" href="ART/Dorohedoro.png">
+          <img class="images_Dorohedoro" src="ART/Dorohedoro.png" alt=""
+        /></a>
       </div>
     </div>
-    <div class="Artworks-container2">
+    <div class="Artworks-container">
       <div class="art1">
-        <img class="images_Agni" src="ART/Agni.png" alt="" />
+        <a target="_blank" rel="noopener noreferrer" href="ART/Agni.png"
+          ><img class="images_Agni" src="ART/Agni.png" alt=""
+        /></a>
       </div>
+
       <div class="art2">
-        <img class="images_Chopper" src="style_files/MypfpRedo.png" alt="" />
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="style_files/MypfpRedo.png"
+          ><img class="images_Chopper" src="style_files/MypfpRedo.png" alt=""
+        /></a>
       </div>
       <div class="art3">
-        <img src="style_files/SalmonRun.png" alt="" class="images_SR" />
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="style_files/SalmonRun.png"
+        >
+          <img src="style_files/SalmonRun.png" alt="" class="images_SR" />
+        </a>
       </div>
       <div class="art4">
-        <img class="images_Luffy" src="ART/LuffyGearTwoPrint.jpg" alt="" />
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="ART/LuffyGearTwoPrint.jpg"
+        >
+          <img class="images_Luffy" src="ART/LuffyGearTwoPrint.jpg" alt="" />
+        </a>
       </div>
+    </div>
+
+    <div class="Artworks-container">
+      <div class="art1">
+        <a target="_blank" rel="noopener noreferrer" href="ART/Ram.jpg"
+          ><img class="images_Ram" src="ART/Ram.jpg" alt=""
+        /></a>
+      </div>
+
+      <div class="art2">
+        <a target="_blank" rel="noopener noreferrer" href="ART/NAGO.jpg"
+          ><img class="images_Nago" src="ART/NAGO.jpg" alt=""
+        /></a>
+      </div>
+      <div class="art3">
+        <a target="_blank" rel="noopener noreferrer" href="ART/Todo.png">
+          <img src="ART/Todo.png" alt="" class="images_Todo" />
+        </a>
+      </div>
+      <div class="art4">
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="ART/Yamato - Copy.png"
+        >
+          <img class="images_Yamato" src="ART/Yamato - Copy.png" alt="" />
+        </a>
+      </div>
+    </div>
+
+    <div class="Artworks-container">
+      <div class="art1">
+        <a target="_blank" rel="noopener noreferrer" href="ART/Denji.jpg"
+          ><img class="images_Denji" src="ART/Denji.jpg" alt=""
+        /></a>
+      </div>
+
+      <div class="art2">
+        <a target="_blank" rel="noopener noreferrer" href="ART/ZoroPrint.jpg"
+          ><img class="images_Zoro" src="ART/ZoroPrint.jpg" alt=""
+        /></a>
+      </div>
+      <div class="art3">
+        <a target="_blank" rel="noopener noreferrer" href="ART/KataKuri.jpg">
+          <img src="ART/KataKuri.jpg" alt="" class="images_Katakuri" />
+        </a>
+      </div>
+    </div>
+
+    <div class="watermark">
+      <p>© Created by Waters 2023</p>
     </div>
   </body>
 </html>
