--- a/2DArtwork.html
+++ b/2DArtwork.html
@@ -16,9 +16,7 @@
         </div>
         <div class="LmyStuff"><a href="Resume.html">RESUME</a></div>
       </div>
-      <a class="title" href="index.html"
-        ><center>WATERS PORTFOLIO</center>
-      </a>
+      <a class="title" href="index.html"><center>WATERS PORTFOLIO</center> </a>
       <div class="Nav">
         <div class="RmyStuff"><a href="Web-Dev.html">WEB DEVELOPMENT</a></div>
         <div class="RmyStuff"><a href="commissions.html">COMMISSIONS</a></div>
