--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="LmyStuff"><a href="Resume.html">RESUME</a></div>
     </div>
-    <a class="title" href="Portfolio.html"
+    <a class="title" href="index.html"
       ><center>WATERS PORTFOLIO</center>
     </a>
     <div class="Nav">
