--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="contentChild">
   <!-- <div class="margin"></div> -->
    <div class="Picture-Name-container">  
-    <div class="BabyPicture"><center><IMG src="/images/MyBabyPicture.jpg" alt="MyBabyPicture" id="BabyPicture"></IMG></div></center>
+    <div class="BabyPicture"><center><IMG src="images/MyBabyPicture.jpg" alt="MyBabyPicture" id="BabyPicture"></IMG></div></center>
     <div class="NameDiv"> <h1 class="MyName"><strong>KODY SCOTT</strong></h1></div>
 
       </div>
@@ -67,11 +67,11 @@
 
             <!-- SocialMedia container will have my social media as Icons-->
     <div class="SocialMedia-container">
-      <div class="twitter"><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/water7oo"><img class ="socialMedia-Pics" src="/images/twitter.png" alt=""></a></div>
-      <div class="Instagram"><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/water7oo/"><img class ="socialMedia-Pics" src="/images/Instagram.png" alt=""></a></div>
-      <div class="Artstation"><a target="_blank" rel="noopener noreferrer" href="https://www.artstation.com/water-radio"><img class ="socialMedia-Pics" src="/images/Artstation.png" alt=""></a></div>
-      <div class="Tumblr"><a target="_blank" rel="noopener noreferrer" href="https://www.tumblr.com/art-of-walters"><img class ="socialMedia-Pics" src="/images/tumblr.png" alt=""></a></div>
-      <div class="GitHub"><a target="_blank" rel="noopener noreferrer" href="https://github.com/water7oo"><img class ="socialMedia-Pics" src="/images/gitHub.png" alt=""></a></div>
+      <div class="twitter"><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/water7oo"><img class ="socialMedia-Pics" src="images/twitter.png" alt=""></a></div>
+      <div class="Instagram"><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/water7oo/"><img class ="socialMedia-Pics" src="images/Instagram.png" alt=""></a></div>
+      <div class="Artstation"><a target="_blank" rel="noopener noreferrer" href="https://www.artstation.com/water-radio"><img class ="socialMedia-Pics" src="images/Artstation.png" alt=""></a></div>
+      <div class="Tumblr"><a target="_blank" rel="noopener noreferrer" href="https://www.tumblr.com/art-of-walters"><img class ="socialMedia-Pics" src="images/tumblr.png" alt=""></a></div>
+      <div class="GitHub"><a target="_blank" rel="noopener noreferrer" href="https://github.com/water7oo"><img class ="socialMedia-Pics" src="images/gitHub.png" alt=""></a></div>
     </div>
 
     <div class="watermark">
