--- a/Web-Dev.html
+++ b/Web-Dev.html
@@ -19,7 +19,7 @@
       <a class="title" href="index.html"><center>WATERS PORTFOLIO</center> </a>
       <div class="Nav">
         <div class="RmyStuff"><a href="Web-Dev.html">WEB DEVELOPMENT</a></div>
-        <div class="RmyStuff"><a href="Commissions.html">COMMISSIONS</a></div>
+        <div class="RmyStuff"><a href="commissions.html">COMMISSIONS</a></div>
         <!-- <div class="menu-container">
        <div class="menu"></div>
       <div class="menu"></div>
